--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>hello world mahima this side</h1>
+    <h1>code push</h1>
+    <h1>I am third year CS student</h1>
     
 </body>
 <script src="index.js"></script>
